/*
Copyright 2019 The KubeCarrier Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";
package kubecarrier.api.v1alpha1;
option go_package = "v1alpha1";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

// Types
message APIVersion {
  string version = 1;
  string branch = 2;
  google.protobuf.Timestamp buildDate = 3;
  string goVersion = 4;
  string platform = 5;
}

// Requests/Responses
message VersionRequest {}

// Service
service Kubecarrier {
  rpc Version(VersionRequest) returns (APIVersion) {
    option (google.api.http) = {
      get: "/v1alpha1/version"
    };
  };
}
